--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,18 @@ dependencies {
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version:'1.1.2'
 }
 
+// jmh Benchmarking Tool
+buildscript {
+   repositories {
+      jcenter()
+   }
+   dependencies {
+      classpath 'me.champeau.gradle:jmh-gradle-plugin:0.1.3'
+   }
+}
+
+apply plugin: 'me.champeau.gradle.jmh'
+
 // create Gradle wrapper with command line `gradle wrapper` in terminal
 task wrapper(type: Wrapper) {
     gradleVersion = '2.0'
