--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ targetCompatibility = 1.8
 
 jar {
     manifest {
-        attributes 'Implementation-Title': 'htm.java', 'Implementation-Version': 0.30
+        attributes 'Implementation-Title': 'htm.java', 'Implementation-Version': 0.40
     }
 }
 
@@ -39,19 +39,41 @@ dependencies {
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version:'1.1.2'
 }
 
-// jmh Benchmarking Tool
+///////////////////////// jmh Benchmarking Tool ///////////////////////
 buildscript {
    repositories {
       jcenter()
+      mavenCentral()
+      maven {
+          name 'Shadow'
+          url 'http://dl.bintray.com/content/johnrengelman/gradle-plugins'
+      }
+      
    }
+   
    dependencies {
       classpath 'me.champeau.gradle:jmh-gradle-plugin:0.1.3'
+      classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.0'
+      classpath 'org.openjdk.jmh:jmh-generator-annprocess:0.5.4'
    }
+   
 }
 
 apply plugin: 'me.champeau.gradle.jmh'
+apply plugin: 'com.github.johnrengelman.shadow'
+
+jmh {
+    resultFormat = 'CSV'
+    fork = 0
+    //jmhVersion = '1.5.1'
+}
+
+tasks.jmhClasses.execute()
+tasks.jmhJar.execute()
+tasks.jmh.execute()
+/////////////////////////////////////////////////////////////////////////
 
 // create Gradle wrapper with command line `gradle wrapper` in terminal
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.0'
+    gradleVersion = '2.2'
 }
