--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,9 @@ dependencies {
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version:'1.1.2'
 }
 
-///////////////////////// jmh Benchmarking Tool ///////////////////////
+/////////////////////////////////////////////////////////////////
+//                   jmh Benchmarking Tool                     //
+/////////////////////////////////////////////////////////////////
 buildscript {
    repositories {
       jcenter()
@@ -54,9 +56,8 @@ buildscript {
    dependencies {
       classpath 'me.champeau.gradle:jmh-gradle-plugin:0.1.3'
       classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.0'
-      classpath 'org.openjdk.jmh:jmh-generator-annprocess:0.5.4'
+      classpath 'org.openjdk.jmh:jmh-generator-annprocess:1.5.2'
    }
-   
 }
 
 apply plugin: 'me.champeau.gradle.jmh'
@@ -64,19 +65,24 @@ apply plugin: 'com.github.johnrengelman.shadow'
 
 jmh {
     resultFormat = 'CSV'
-    fork = 0
-    //jmhVersion = '1.5.1'
+    fork = 1
+    warmupIterations = 5 // Number of warm up iterations to do.
+    iterations = 5       // Number of measurement iterations to do.
 }
 
-task runBench(dependsOn: check) << {
-    tasks.jmhClasses.execute()
-    tasks.jmhJar.execute()
-    tasks.jmh.execute()
+task runBench(dependsOn: ['parent.compile', 'test']) << {
+    if(!project.hasProperty('skipbench')) {
+        tasks.compileJmhJava.execute()
+        tasks.processJmhResources.execute()
+        tasks.jmhJar.execute()
+        tasks.jmh.execute()
+    }
 }
 
-tasks.runBench.execute()
-
-/////////////////////////////////////////////////////////////////////////
+check.doLast {
+    tasks.runBench.execute()
+}
+/////////////////// END jmh /////////////////////
 
 // create Gradle wrapper with command line `gradle wrapper` in terminal
 task wrapper(type: Wrapper) {
